# boost-interprocess-playground

./: .gitignore  LICENSE  README.md  build.ps1
client/: CMakeLists.txt  main.cpp
fb_with_flutter/: .gitignore  bindgen.ps1  build.ps1  pubspec.yaml
fb_with_flutter/cpp_shared/: create_message_queue.cpp  create_message_queue.h
fb_with_flutter/engine/: CMakeLists.txt  build.ps1
fb_with_flutter/engine/flutter_connector/: CMakeLists.txt
fb_with_flutter/engine/flutter_connector/src/: main.cpp
fb_with_flutter/engine/src/: main.cpp
fb_with_flutter/engine_connector/: CMakeLists.txt
fb_with_flutter/engine_connector/src/: main.cpp
fb_with_flutter/lib/: engine_connector.dart  main.dart
fb_with_flutter/windows/runner/: Runner.rc  main.cpp
flatbuffers_with_flutter/: .gitignore  README.md  pubspec.yaml
flatbuffers_with_flutter/test/: widget_test.dart
flatbuffers_with_flutter/windows/: CMakeLists.txt
message_queue/: build.ps1
message_queue/client/: main.cpp
message_queue/server/: main.cpp
server/: CMakeLists.txt  main.cpp
shared/: messages.hpp
with_flatbuffers/: CMakeLists.txt  build.ps1  message.fbs  message_generated.h
with_flatbuffers/src/: main.cpp
